[package]
name = "thulir-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
scraper = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
html5ever = "0.26"
markup5ever = "0.11.0"
markup5ever_rcdom = "0.2.0"